fix openapi fix security chore clean
